story #15455: wip to revert