@@ -38,6 +38,7 @@ package fr.gouv.vitamui.cas.ticket;
 
 import fr.gouv.vitamui.commons.api.CommonConstants;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang.StringUtils;
 import org.apereo.cas.authentication.Authentication;
@@ -46,13 +47,18 @@ import org.apereo.cas.authentication.principal.Service;
 import org.apereo.cas.services.ServicesManager;
 import org.apereo.cas.ticket.ExpirationPolicyBuilder;
 import org.apereo.cas.ticket.UniqueTicketIdGenerator;
+import org.apereo.cas.support.oauth.OAuth20GrantTypes;
+import org.apereo.cas.support.oauth.OAuth20ResponseTypes;
+import org.apereo.cas.ticket.TicketGrantingTicket;
 import org.apereo.cas.ticket.accesstoken.OAuth20AccessToken;
 import org.apereo.cas.ticket.accesstoken.OAuth20DefaultAccessTokenFactory;
 import org.apereo.cas.ticket.tracking.TicketTrackingPolicy;
 import org.apereo.cas.token.JwtBuilder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
+import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Specific factory for access tokens using the auth token as identifier.
@@ -60,34 +66,53 @@ import java.util.List;
  *
  */
 @Getter
+@Slf4j
 public class CustomOAuth20DefaultAccessTokenFactory extends OAuth20DefaultAccessTokenFactory {
 
     public CustomOAuth20DefaultAccessTokenFactory(
-        final UniqueTicketIdGenerator accessTokenIdGenerator,
-        final ExpirationPolicyBuilder<OAuth20AccessToken> expirationPolicyBuilder,
-        final JwtBuilder jwtBuilder,
-        final ServicesManager servicesManager,
-        final TicketTrackingPolicy descendantTicketsTrackingPolicy) {
+            final UniqueTicketIdGenerator accessTokenIdGenerator,
+            final ExpirationPolicyBuilder<OAuth20AccessToken> expirationPolicyBuilder,
+            final JwtBuilder jwtBuilder,
+            final ServicesManager servicesManager,
+            final TicketTrackingPolicy descendantTicketsTrackingPolicy) {
         super(
-            accessTokenIdGenerator,
-            expirationPolicyBuilder,
-            jwtBuilder,
-            servicesManager,
-            descendantTicketsTrackingPolicy);
+                accessTokenIdGenerator,
+                expirationPolicyBuilder,
+                jwtBuilder,
+                servicesManager,
+                descendantTicketsTrackingPolicy);
+    }
+
+    @Override
+    public OAuth20AccessToken create(final Service service, final Authentication authentication,
+            final TicketGrantingTicket ticketGrantingTicket,
+            final Collection<String> scopes, final String clientId,
+            final String dpopConfirmation,
+            final Map<String, Map<String, Object>> claims,
+            final OAuth20ResponseTypes responseType,
+            final OAuth20GrantTypes grantType) throws Throwable {
+        Authentication authn = authentication;
+        if (ticketGrantingTicket != null && ticketGrantingTicket.getAuthentication() != null) {
+            authn = ticketGrantingTicket.getAuthentication();
+            LOGGER.debug("Using user authentication from TGT: {} instead of passed authentication: {}",
+                    authn.getPrincipal().getId(),
+                    authentication != null ? authentication.getPrincipal().getId() : "null");
+        }
+        return super.create(service, authn, ticketGrantingTicket, scopes, clientId, dpopConfirmation, claims,
+                responseType, grantType);
     }
 
     @Override
     protected String generateAccessTokenId(final Service service, final Authentication authentication)
-        throws Throwable {
-        val request =
-            ((ServletRequestAttributes)
-                org.springframework.web.context.request.RequestContextHolder.getRequestAttributes())
+            throws Throwable {
+        val request = ((ServletRequestAttributes) org.springframework.web.context.request.RequestContextHolder
+                .getRequestAttributes())
                 .getRequest();
         final Principal principal = authentication.getPrincipal();
         String authToken;
         final List<Object> values = principal.getAttributes().get(CommonConstants.AUTHTOKEN_ATTRIBUTE);
-        if (values != null && values.size() > 0) {
-            authToken = (String) values.get(0);
+        if (values != null && !values.isEmpty()) {
+            authToken = (String) values.getFirst();
             request.setAttribute(CommonConstants.AUTHTOKEN_ATTRIBUTE, authToken);
         } else {
             authToken = (String) request.getAttribute(CommonConstants.AUTHTOKEN_ATTRIBUTE);
